--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -46,7 +46,7 @@ Lexers are constructed using the LexerBuilder,
 which operates on an ordered list of token definitions.
 Token definitions are applied in sequence: the first match at the current position in the character stream is emitted as a token.
 This makes the order of definitions critical—more specific patterns must appear before more general ones.
-For example, a token defined by the regex `/appel/` should precede one defined by `/a[a-z]*/` to ensure correct tokenization.
+For example, a token defined by the regex `/apple/` should precede one defined by `/a[a-z]*/` to ensure correct tokenization.
 
 Tokens can be defined using standard JavaScript regular expressions and annotated with optional metadata as shown in [](#token-def).
 The LexerBuilder supports utility functions such as `merge`, `moveBefore`, and `moveAfter` to assist with reordering and composing token lists.
@@ -64,12 +64,13 @@ Definition of a token matching 'traqula' in a case-insensitive manner.
 Parsers are defined using the ParserBuilder,
 which allows rules to be registered by name into a rule map, thereby creating a loose coupling between registered rules.
 Each rule is defined as a `ParserRule` object, containing both a rule name and a rule implementation.
-Rule implementations are expressed declaratively using Chevrotain’s grammar definition functions:
+Rule implementations are expressed declaratively using Chevrotain’s grammar definition functions like:
 
 1. SUBRULE: invokes another rule, registered under some name in the current parser,
 2. MANY: matches zero or more occurrences of a pattern,
 3. OR: matches one of several alternatives.
 
+<!-- Could be removed if there is a lack of space -->
 Additionally, rules have access to a WeakMap-based cache for optimizing repeat invocations
 — useful when rule implementation construct large arrays that can be cached between executions.
 
