Add initial review

--- a/content/1.introduction.md
+++ b/content/1.introduction.md
@@ -14,13 +14,13 @@ creating a heterogeneous landscape where queries that run on one engine may fail
 This diversity presents a serious challenge for SPARQL portability, tooling and federated querying.
 With the finalisation of the [SPARQL 1.2 specification](cite:cites sparql-1-2),
 the gap between supported language features is likely to widen further,
-since migration to SPARQL 1.2 is not trivial, requiring substantial updates to the [datasets representation and underlying RDF store](cite:cites rdf-1-2).
+since migration to SPARQL 1.2 is not trivial, requiring substantial updates to the [datasets representation and underlying RDF store](cite:cites rdf-1-2)<span class="comment" data-author="RT">Let's make this hint a bit more precise. I think we can mention triple terms here (without explaining them), and mentioning that they are a new type of triple term.</span>.
 Moreover, the working group has announced that after SPARQL 1.2 finalisation,
 they plan to move toward a more agile ["maintenance and new features" mode](https://github.com/w3c/sparql-dev/issues/32#issuecomment-2621209920),
 which hints at even faster iteration cycles in the future.
 As a result, there is a growing need for tooling that embraces extensibility and modularity by design.
 
-In this work, we present Traqula,
+In this work, we present *Traqula*,<span class="comment" data-author="RT">I would recommend weakening this a bit. I'd officially introduce Traqula in your final resource paper. In this article, I would focus on the motivation, and talk more about what you want to achieve with Traqula. It should be clear that it's not a finished product, but more a vision, for which you already have a first version that you want to show off.</span>
 a modular SPARQL parser and generator built on top of the [Chevrotain parser toolkit](cite:cites chevrotain).
 Traqula is developed within the [Comunica ecosystem](cite:cites comunica),
 known for its flexible and modular architecture.
@@ -32,8 +32,12 @@ Traqula is not a hand-built parser either, as it uses the declarative rule const
 
 By adopting the Builder design pattern, Traqula empowers both researchers and practitioners to add, override, or swap grammar fragments at runtime,
 enabling a new generation of language-aware SPARQL tools. 
-This opens the door to use cases such as maintainable heterogeneous query interface tooling
-(e.g., adapting editors like [YASGUI](https://yasgui.org/) to custom SPARQL dialects),
+This opens the door to use cases such as <span class="grammar reprase" data-author="RT">maintainable heterogeneous query interface tooling
+(e.g., adapting editors like [YASGUI](https://yasgui.org/) to custom SPARQL dialects)</span>,
 SPARQL version translation, and rapid experimentation with new language features.
 In an ecosystem where SPARQL flavors are growing rather than converging,
 we believe modularity is not just a nicety—it’s a necessity.
+
+<span class="comment" data-author="RT">Can you outline the structure of the article here?</span>
+
+<span class="comment" data-author="RT">If you have space for it, I also recommend adding a related work section. Maybe you can find some SPARQL parsing-related research papers. For example, Yasqui has a paper, which should probably be cited. SPARQL.js is also an important one, not sure if it has a paper. Comunica could be discussed briefly as well. And then there are the different SPARQL parsers in existence, which could be mentioned, such as Jena, Oxigraph, ... A detailed survey is not necessary though, we can keep this for the next paper. But a high-level overview may be good to have.</span>
