--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -1,16 +1,18 @@
 ## Software Architecture
 {:#architecture}
 
+<span class="comment" data-author="RT">The contents of this section are very good. But we should be mindful of what we will include in the next resource paper. Because everything we add here, will be considered prior work, and we won't be able to include it in the next paper anymore (we can repeat things at a high-level still of course). So if you are certain that the contents here won't be needed anymore at this level of detail in the next paper (which could be feasible), then we can keep this here. If not, I would consider removing it, and keeping it for the next paper.</span>
+
 Parsers are typically implemented in one of three ways:
 
-1. Hand-built parsers — These are manually implemented parsers tailored to a specific grammar.
+1. **Hand-built parsers**: These are manually implemented parsers tailored to a specific grammar.
 While they can be highly performant due to low-level optimizations and language-specific design,
 they are often difficult to maintain, extend, or modularize. 
-2. Parser generators — Tools such as [ANTLR](cite:cites parr1995antlr) and [Bison](cite:cites bison-gnu) use a Domain Specific Language (DSL),
+2. **Parser generators**: Tools such as [ANTLR](cite:cites parr1995antlr) and [Bison](cite:cites bison-gnu) use a Domain Specific Language (DSL),
 typically based on Extended Backus–Naur Form (EBNF), to define a grammar.
 These grammars are then compiled into standalone parser code.
 While powerful, such approaches introduce a compile step and tend to be rigid, making modular extensions cumbersome. 
-3. Parser building toolkits — Libraries such as [Chevrotain](cite:cites chevrotain) offer a hybrid approach,
+3. **Parser building toolkits**: Libraries such as [Chevrotain](cite:cites chevrotain) offer a hybrid approach,
 enabling declarative grammar specification within a host programming language.
 These toolkits eliminate the compile step and allow for flexible,
 programmatic grammar definitions with fine-grained control over behavior and integration.
@@ -19,9 +21,9 @@ To support modularity while keeping the mental model approachable, Traqula is bu
 Parsing itself is typically divided into multiple phases [](cite:cites alfred2007compilers),
 of which the following are relevant to this work:
 
-1. Lexical Analysis (scanning): A lexer transforms a character stream into a token stream. 
-2. Syntax Analysis (parsing): A parser transforms the token stream into an abstract syntax tree (AST). 
-3. Semantic Analysis: Performed during or after parsing,
+1. **Lexical Analysis (*scanning*)**: A lexer transforms a character stream into a token stream. 
+2. **Syntax Analysis (*parsing*)**: A parser transforms the token stream into an abstract syntax tree (AST). 
+3. **Semantic Analysis**: Performed during or after parsing,
 this phase validates constraints not enforced by grammar alone.
 For instance, SPARQL forbids binding to a variable which is already in scope.
 
@@ -31,8 +33,8 @@ enabling accurate diagnostics with row and column offsets.
 
 The Traqula codebase follows a [monorepo](https://monorepo.tools/) structure and is divided into two main categories of packages:
 
-1. Engines — These are prebuilt, ready-to-use components such as SPARQL 1.1 and 1.2 parsers or generators. 
-2. Non-engine packages — These expose modular building blocks used to construct engines,
+1. **Engines**: These are prebuilt, ready-to-use components such as SPARQL 1.1 and 1.2 parsers or generators. 
+2. **Non-engine packages**: These expose modular building blocks used to construct engines,
 such as grammar fragments or core construction utilities.
 
 At the core of Traqula lies its builder infrastructure.
@@ -66,9 +68,9 @@ which allows rules to be registered by name into a rule map, thereby creating a 
 Each rule is defined as a `ParserRule` object, containing both a rule name and a rule implementation.
 Rule implementations are expressed declaratively using Chevrotain’s grammar definition functions like:
 
-1. SUBRULE: invokes another rule, registered under some name in the current parser,
-2. MANY: matches zero or more occurrences of a pattern,
-3. OR: matches one of several alternatives.
+1. **`SUBRULE`**: invokes another rule, registered under some name in the current parser,
+2. **`MANY`**: matches zero or more occurrences of a pattern,
+3. **`OR`**: matches one of several alternatives.
 
 <!-- Could be removed if there is a lack of space -->
 Additionally, rules have access to a WeakMap-based cache for optimizing repeat invocations
