--- a/content/3.demo.md
+++ b/content/3.demo.md
@@ -9,6 +9,7 @@ Starting from a prebuilt SPARQL 1.1 parser,
 we will incrementally evolve the grammar in four small steps using Traqula’s builder-based architecture.
 Each change will be demonstrated live, with code edits performed in an IDE and parser behavior verified in a browser-based UI.
 Specifically, we will:
+
 1. extend SPARQL to support the [ADJUST function](cite:cites oxigraph-adjust), 
 2. add support for [CONSTRUCT QUAD queries](cite:cites jena-construct-quad), 
 3. introduce [full-text search capabilities](cite:cites virtuoso-full-text-search), and 
@@ -19,13 +20,14 @@ LexerBuilder, ParserBuilder, and GeneratorBuilder—enables safe and modular gra
 The focus will be on how individual grammar components can be extended or replaced without touching unrelated parts of the parser.
 We will also highlight how Traqula’s use of strong typing improves the developer experience by surfacing integration errors at compile time.
 
-For each of the extensions we alter the grammar rules in accordance to the [SPARQL 1.1 specification](cite:cites spec:sparql) showed between brackets:
-1. ADJUST function: We add an '`ADJUST`' token to the lexer and add a grammar rule for it, then patch the [BuiltInCall [121]](https://www.w3.org/TR/sparql11-query/#rBuiltInCall) rule. 
-2. CONSTRUCT QUAD queries: Following [Jena’s approach](https://jena.apache.org/documentation/query/construct-quad.html#grammar),
+For each of the extensions we alter the grammar rules in accordance to the [SPARQL 1.1 specification](cite:cites spec:sparql) (shown between brackets):
+
+1. **ADJUST function**: We add an '`ADJUST`' token to the lexer and add a grammar rule for it, then patch the [BuiltInCall [121]](https://www.w3.org/TR/sparql11-query/#rBuiltInCall) rule. 
+2. **CONSTRUCT QUAD queries**: Following [Jena’s approach](https://jena.apache.org/documentation/query/construct-quad.html#grammar),
 we patch the [ConstructQuery [10]](https://www.w3.org/TR/sparql11-query/#rConstructQuery) and [ConstructTriples [74]](https://www.w3.org/TR/sparql11-query/#rConstructTriples) rules and introduce a ConstructQuads rule. 
-3. Full-text search: <!-- https://docs.openlinksw.com/virtuoso/rdfsparql/ -->
+3. **Full-text search**: <!-- https://docs.openlinksw.com/virtuoso/rdfsparql/ -->
 We patch the [objectPath [86]](https://www.w3.org/TR/sparql11-query/#rObjectPath) and [object [80]](https://www.w3.org/TR/sparql11-query/#rObject) rules to allow an '`OPTION`' keyword followed by a scoring clause like '`( score Expression )`'. 
-4. Dropping OPTIONAL: This involves deleting the [OptionalGraphPattern [57]](https://www.w3.org/TR/sparql11-query/#rOptionalGraphPattern) rule, patching the [GraphPatternNotTriples [56]](https://www.w3.org/TR/sparql11-query/#rGraphPatternNotTriples),
+4. **Dropping OPTIONAL**: This involves deleting the [OptionalGraphPattern [57]](https://www.w3.org/TR/sparql11-query/#rOptionalGraphPattern) rule, patching the [GraphPatternNotTriples [56]](https://www.w3.org/TR/sparql11-query/#rGraphPatternNotTriples),
 and removing the '`OPTIONAL`' token from the lexer.
 
 While the demo is not interactive for attendees,
