process feedback of RT - pre LLM fix

--- a/content/1.introduction.md
+++ b/content/1.introduction.md
@@ -14,30 +14,34 @@ creating a heterogeneous landscape where queries that run on one engine may fail
 This diversity presents a serious challenge for SPARQL portability, tooling and federated querying.
 With the finalisation of the [SPARQL 1.2 specification](cite:cites sparql-1-2),
 the gap between supported language features is likely to widen further,
-since migration to SPARQL 1.2 is not trivial, requiring substantial updates to the [datasets representation and underlying RDF store](cite:cites rdf-1-2)<span class="comment" data-author="RT">Let's make this hint a bit more precise. I think we can mention triple terms here (without explaining them), and mentioning that they are a new type of triple term.</span>.
+since migration to SPARQL 1.2 is not trivial, requiring substantial updates to the [datasets representation and underlying RDF store](cite:cites rdf-1-2).
+The RDF1.1 to RDF1.2 update is substantial mainly because of the introduction of a new triple term,
+specifically the object of a triple can now be a triple itself,
+allowing for the recursive definition of triples since the triple contained in the object can again have a triple in the object spot.  
 Moreover, the working group has announced that after SPARQL 1.2 finalisation,
 they plan to move toward a more agile ["maintenance and new features" mode](https://github.com/w3c/sparql-dev/issues/32#issuecomment-2621209920),
 which hints at even faster iteration cycles in the future.
 As a result, there is a growing need for tooling that embraces extensibility and modularity by design.
 
-In this work, we present *Traqula*,<span class="comment" data-author="RT">I would recommend weakening this a bit. I'd officially introduce Traqula in your final resource paper. In this article, I would focus on the motivation, and talk more about what you want to achieve with Traqula. It should be clear that it's not a finished product, but more a vision, for which you already have a first version that you want to show off.</span>
-a modular SPARQL parser and generator built on top of the [Chevrotain parser toolkit](cite:cites chevrotain).
-Traqula is developed within the [Comunica ecosystem](cite:cites comunica),
-known for its flexible and modular architecture.
+In this work, we show the need for a modular parser and what such a parser could look like.
+We are inspired by the [Comunica ecosystem](cite:cites comunica), known for its flexible and modular architecture.
 Unlike traditional parser generators such as [ANTLR](cite:cites parr1995antlr) or [Bison](cite:cites bison-gnu),
-which rely on Domain Specific Languages (DSLs) and generate static parsing code — Traqula defines parsers entirely within TypeScript.
-This eliminates the compile step, enables programmatic extension, and leverages strong typing to provide a safer,
+which rely on Domain Specific Languages (DSLs) and generate static parsing code — our parser should be defined entirely within TypeScript.
+This would eliminate the compile step, enable programmatic extension, and leverage strong typing to provide a safer,
 more developer-friendly API.
-Traqula is not a hand-built parser either, as it uses the declarative rule constructors provided by Chevrotain.
+The parser should not be a handwritten parser either, instead it should use declarative rules such as present in the [Chevrotain parser toolkit](cite:cites chevrotain).
 
-By adopting the Builder design pattern, Traqula empowers both researchers and practitioners to add, override, or swap grammar fragments at runtime,
-enabling a new generation of language-aware SPARQL tools. 
-This opens the door to use cases such as <span class="grammar reprase" data-author="RT">maintainable heterogeneous query interface tooling
-(e.g., adapting editors like [YASGUI](https://yasgui.org/) to custom SPARQL dialects)</span>,
-SPARQL version translation, and rapid experimentation with new language features.
+A modular parser, that allows you to add, override, or swap grammar fragments at runtime,
+would empower both researchers and practitioners to create a new generation of language-aware SPARQL tools.
+This opens the door to use cases such as heterogeneous query tooling (e.g., adapting editors like [YASGUI](https://yasgui.org/) to custom SPARQL dialects),
+while keeping maintainability in check.
+Additionally, it would allow SPARQL version translation, and rapid experimentation with new language features.
 In an ecosystem where SPARQL flavors are growing rather than converging,
 we believe modularity is not just a nicety—it’s a necessity.
 
-<span class="comment" data-author="RT">Can you outline the structure of the article here?</span>
+The next section discusses the state of the system architecture, while [](#demo) sketches the demonstration that we will provide to the workshop.
+In [](#conclusion) we conclude the future work and desired impact of this research.
 
+<!--
 <span class="comment" data-author="RT">If you have space for it, I also recommend adding a related work section. Maybe you can find some SPARQL parsing-related research papers. For example, Yasqui has a paper, which should probably be cited. SPARQL.js is also an important one, not sure if it has a paper. Comunica could be discussed briefly as well. And then there are the different SPARQL parsers in existence, which could be mentioned, such as Jena, Oxigraph, ... A detailed survey is not necessary though, we can keep this for the next paper. But a high-level overview may be good to have.</span>
+-->
