--- a/content/2.architecture.md
+++ b/content/2.architecture.md
@@ -1,8 +1,6 @@
 ## Software Architecture
 {:#architecture}
 
-<span class="comment" data-author="RT">The contents of this section are very good. But we should be mindful of what we will include in the next resource paper. Because everything we add here, will be considered prior work, and we won't be able to include it in the next paper anymore (we can repeat things at a high-level still of course). So if you are certain that the contents here won't be needed anymore at this level of detail in the next paper (which could be feasible), then we can keep this here. If not, I would consider removing it, and keeping it for the next paper.</span>
-
 Parsers are typically implemented in one of three ways:
 
 1. **Hand-built parsers**: These are manually implemented parsers tailored to a specific grammar.
@@ -17,7 +15,7 @@ enabling declarative grammar specification within a host programming language.
 These toolkits eliminate the compile step and allow for flexible,
 programmatic grammar definitions with fine-grained control over behavior and integration.
 
-To support modularity while keeping the mental model approachable, Traqula is built using a parser building toolkit.
+To support modularity while keeping the mental model approachable, a modular parser should be build using a parser building toolkit.
 Parsing itself is typically divided into multiple phases [](cite:cites alfred2007compilers),
 of which the following are relevant to this work:
 
@@ -27,64 +25,42 @@ of which the following are relevant to this work:
 this phase validates constraints not enforced by grammar alone.
 For instance, SPARQL forbids binding to a variable which is already in scope.
 
-
+<!--
 Traqula performs some semantic checks during parsing to generate precise and contextual error messages while token positions are still available,
 enabling accurate diagnostics with row and column offsets.
+-->
 
-The Traqula codebase follows a [monorepo](https://monorepo.tools/) structure and is divided into two main categories of packages:
+Inspired by the [Comunica modular query engine](cite:cites comunica) codebase,
+the codebase of a modular parser should also follow a [monorepo](https://monorepo.tools/) structure, dividing its code into modular packages.
+Within the Comunica codebase, the monorepo structure allows it to define many different builds (eg. a minimal built for the web, and a general built with and without file system access). Similar benefits can be expected in the adoption of a monorepo structure within the modular parser:
 
 1. **Engines**: These are prebuilt, ready-to-use components such as SPARQL 1.1 and 1.2 parsers or generators. 
 2. **Non-engine packages**: These expose modular building blocks used to construct engines,
 such as grammar fragments or core construction utilities.
 
-At the core of Traqula lies its builder infrastructure.
-Each main component—lexer, parser, and generator—has a dedicated builder:
-LexerBuilder, ParserBuilder, and GeneratorBuilder.
-These builders provide type-safe APIs to assemble, customize, and extend parsing pipelines.
+However, unlike Comunica which uses Components.js, a dependency injection framework using RDF based config files,
+the modular query engine can be configured within the host language itself since components share a similar interface.
+We propose that a parser be build using a builder pattern and that parser packages export the builder used, so other may extend upon it.
+Using a builder pattern for the parser allows you to take a builder that is used to build one parser and manipulate the grammar rules to construct a new parser.
 
-### Lexer Builder
-
-Lexers are constructed using the LexerBuilder,
-which operates on an ordered list of token definitions.
-Token definitions are applied in sequence: the first match at the current position in the character stream is emitted as a token.
-This makes the order of definitions critical—more specific patterns must appear before more general ones.
-For example, a token defined by the regex `/apple/` should precede one defined by `/a[a-z]*/` to ensure correct tokenization.
-
-Tokens can be defined using standard JavaScript regular expressions and annotated with optional metadata as shown in [](#token-def).
-The LexerBuilder supports utility functions such as `merge`, `moveBefore`, and `moveAfter` to assist with reordering and composing token lists.
-Additionally, the builders type system will help with the construction of the lexer.
-
-<figure id="token-def" class="listing">
-````/code/tokenDefinition.ts````
-<figcaption markdown="block">
-Definition of a token matching 'traqula' in a case-insensitive manner.
-</figcaption>
-</figure>
-
-### Parser Builder
-
-Parsers are defined using the ParserBuilder,
-which allows rules to be registered by name into a rule map, thereby creating a loose coupling between registered rules.
+Concretely, we propose a builder which allows rules to be registered by name into a rule map,
+thereby creating a loose coupling between registered rules.
 Each rule is defined as a `ParserRule` object, containing both a rule name and a rule implementation.
-Rule implementations are expressed declaratively using Chevrotain’s grammar definition functions like:
+Rule implementations can be expressed declaratively using Chevrotain’s grammar definition functions like:
 
 1. **`SUBRULE`**: invokes another rule, registered under some name in the current parser,
 2. **`MANY`**: matches zero or more occurrences of a pattern,
 3. **`OR`**: matches one of several alternatives.
 
-<!-- Could be removed if there is a lack of space -->
-Additionally, rules have access to a WeakMap-based cache for optimizing repeat invocations
-— useful when rule implementation construct large arrays that can be cached between executions.
-
-Each rule implementation returns a function that,
-when invoked, receives the parsing context and any parameters, and outputs part of the final syntax tree. 
+We propose, each rule implementation returns a function that,
+when invoked, receives the parsing context and any parameters, and outputs part of the final syntax tree.
 [](#ruleDef) shows an example parser rule definition.
-
-The ParserBuilder supports compositional construction and extension through methods like addRule, deleteRule, merge, and typePatch.
-The typePatch utility enables type updates to existing rules
+The ParserBuilder can then be used for compositional construction and extension through methods like `addRule`, `deleteRule`, `merge`, and typePatch.
+The typePatch utility would enable type updates to existing rules
 — particularly useful when extending or modifying a dependent rule without altering the original rule’s implementation.
 After the construction of your parser, you can build it, as shown in [](#parserBuild),
-returning a parser which allows you to start parsing a string from any of the parser rules added to the builder.
+returning a parser which allows you to start parsing a string from any of the parser rules added to the builder
+- a property transferred from the underlying parser builder toolkit.
 
 <figure id="ruleDef" class="listing">
 ````/code/ruleDef.ts````
@@ -92,7 +68,6 @@ returning a parser which allows you to start parsing a string from any of the pa
 The definition of a parser rule parsing either a URI of the nil token, returning the parser URI or null respectively.
 </figcaption>
 </figure>
-
 
 <figure id="parserBuild" class="listing">
 ````/code/parserBuild.ts````
@@ -102,13 +77,7 @@ It also shows how to parse using the iriOrNil rule as the starting rule.
 </figcaption>
 </figure>
 
-
-### Generator Builder
-
-Generators are used to convert an AST back into a string representation.
-Like parsers, generators are composed of named rules, each associated with a definition function.
-These functions receive declarative utilities for constructing the output,
-and return a callable function that operates over AST nodes, context, and parameters.
-
-This builder pattern allows for easy composition and reuse of output logic,
-and promotes consistency between parsing and generation pipelines.
+As for the lexer, a similar approach to the parser should be taken.
+Tokens should be coupled loosely through a name-definition map.
+The consumption of a token then results in the consumption of the token with that name in the used lexer.
+Besides that our only requirement is that the tokens can be expressed through the definition of a regex.
