--- a/content/3.demo.md
+++ b/content/3.demo.md
@@ -4,9 +4,9 @@
 <!-- Demo submissions must additionally provide a description of the demonstration that will be given at the conference (which may include screenshots and must include either a link to an online demo or to a video presenting it).  -->
 
 In the workshop demonstration,
-we will showcase how Traqula enables straightforward modification and extension of the parsers.
+we will showcase how our proof of concept modular parser-builder enables straightforward modification and extension of the existing parsers.
 Starting from a prebuilt SPARQL 1.1 parser,
-we will incrementally evolve the grammar in four small steps using Traqula’s builder-based architecture.
+we will incrementally evolve the grammar in four small steps using the described builder-based architecture.
 Each change will be demonstrated live, with code edits performed in an IDE and parser behavior verified in a browser-based UI.
 Specifically, we will:
 
@@ -15,10 +15,9 @@ Specifically, we will:
 3. introduce [full-text search capabilities](cite:cites virtuoso-full-text-search), and 
 4. remove support for the OPTIONAL clause due to its [impact on query complexity](cite:cites querycomplexity).
 
-These modifications will demonstrate how Traqula’s architecture—built around the
-LexerBuilder, ParserBuilder, and GeneratorBuilder—enables safe and modular grammar changes with minimal effort.
+These modifications will demonstrate how the modular parser architecture—built around builders enables safe and modular grammar changes with minimal effort.
 The focus will be on how individual grammar components can be extended or replaced without touching unrelated parts of the parser.
-We will also highlight how Traqula’s use of strong typing improves the developer experience by surfacing integration errors at compile time.
+We will also highlight how the use of strong typing improves the developer experience by surfacing integration errors at compile time.
 
 For each of the extensions we alter the grammar rules in accordance to the [SPARQL 1.1 specification](cite:cites spec:sparql) (shown between brackets):
 
@@ -32,5 +31,5 @@ and removing the '`OPTIONAL`' token from the lexer.
 
 While the demo is not interactive for attendees,
 all code and tooling will be made available for experimentation after the session.
-The demo will serve to illustrate how Traqula enables a new generation of language-aware SPARQL tools with modular,
+The demo will serve to illustrate how a modular parser builder enables a new generation of language-aware SPARQL tools with modular,
 declarative grammar support and a strong developer experience.
