--- a/content/4.conclusion.md
+++ b/content/4.conclusion.md
@@ -2,5 +2,14 @@
 {:#conclusion}
 
 
+Future research:
+
+1. construct default parser that can be used in various settings.
+Specifically, the AST should allow for round-tripping generation,
+meaning a query parsed into an AST than generated again to a query should be string identical to the first. 
+2. A generator that supports round-tripping, the architecture for this generator could be inspired on the popular [Babel library].
+3. An easy-to-use transformer that allows you to transform an AST into a different datastructures
+
+
 **Acknowledgements.** Jitse De Smet is a predoctoral fellow of the Research Foundation – Flanders (FWO) (1SB8525N).
 Ruben Taelman is a postdoctoral fellow of the Research Foundation – Flanders (FWO) (1202124N).
