write conclusion and abstract

--- a/content/4.conclusion.md
+++ b/content/4.conclusion.md
@@ -1,15 +1,24 @@
 ## Conclusion
 {:#conclusion}
 
+In this paper, we presented a modular, builder-based architecture for constructing extensible SPARQL parsers.
+By embracing runtime modularity, declarative rule definitions, and strong typing,
+our approach enables a new class of SPARQL tools that can evolve alongside a rapidly diversifying query ecosystem.
+Through our demonstration, we showed that parser modification can be performed with minimal overhead and high confidence in correctness.
 
-Future research:
+Looking ahead, several important challenges remain.
 
-1. construct default parser that can be used in various settings.
-Specifically, the AST should allow for round-tripping generation,
-meaning a query parsed into an AST than generated again to a query should be string identical to the first. 
-2. A generator that supports round-tripping, the architecture for this generator could be inspired on the popular [Babel library].
-3. An easy-to-use transformer that allows you to transform an AST into a different datastructures
+1. In order to bootstrap the adoption of the modular parser, a robust, default parser with a well-defined Abstract Syntax Tree (AST) format should be created.
+This AST should support round-tripping—ensuring that a query parsed into the AST and then regenerated from it yields a string-identical query.
+This requirement on the AST will facilitate the creation of language tools such as linters. 
+2. To support such round-tripping, we will need to design a corresponding generator.
+This generator could follow architectural patterns established by the [Babel JavaScript compiler](cite:cites babel) combined with the builder pattern described in this work. 
+3. We envision the need for a flexible AST transformer system that makes it easy to map the AST into alternative representations.
+Such a transformer will facilitate static analysis, query-optimization, and translation to other query languages.
 
+Together, these next steps would complete a robust pipeline:
+from parsing, through transformation, to code generation—all powered by modular, declarative components.
+We hope this work provides a foundation for building SPARQL tools that are not only adaptable to change, but actively enable it.
 
 **Acknowledgements.** Jitse De Smet is a predoctoral fellow of the Research Foundation – Flanders (FWO) (1SB8525N).
 Ruben Taelman is a postdoctoral fellow of the Research Foundation – Flanders (FWO) (1202124N).
