--- a/content/references.bib
+++ b/content/references.bib
@@ -45,13 +45,26 @@
   year        = "2025",
 }
 
-@TechReport{chevrotain,
-  author      = "Chevrotain (Shahar Soel)",
-  title       = "Chevrotain - Parser Building Toolkit for JavaScript",
-  month       = apr,
-  url         = "https://github.com/Chevrotain/chevrotain/",
-  year        = "2025",
+@misc{chevrotain,
+  author    = {Chevrotain (Shahar Soel)},
+  title     = {Chevrotain - Parser Building Toolkit for JavaScript},
+  year      = {2025},
+  month     = apr,
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  url       = "https://github.com/Chevrotain/chevrotain/"
 }
+
+
+@misc{babel,
+  author    = {sebmck and nicolo-ribaudo and hzoo},
+  title     = {Babel},
+  year      = {2025},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  url       = "https://github.com/babel/babel"
+}
+
 
 @inproceedings{comunica,
   author = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
