--- a/content/0.abstract.md
+++ b/content/0.abstract.md
@@ -9,13 +9,26 @@
 <!-- Conclusion: What the findings mean for the audience -->
 <!-- Perspectives: What the future holds, beyond this work -->
 
+<!-- Context: Why the need is so pressing or important -->
+The SPARQL ecosystem has become increasingly fragmented as engines introduce valuable but incompatible language extensions.
+<!-- Need: Why something needed to be done at all -->
+This growing diversity undermines query portability, tooling reliability, and the pace of innovation.
+<!-- Task: What was undertaken to address the need -->
+To address this, we designed a modular parser architecture that supports dynamic extension and modular grammar definitions.
+<!-- Object: What the present document does or covers -->
+This paper presents a builder-based, TypeScript-native parser framework inspired by Chevrotain and the modular principles of Comunica.
+<!-- Findings: What the work done yielded or revealed -->
+Our prototype demonstrates that key SPARQL extensions can be integrated, altered, or removed with minimal effort and strong type safety.
+<!-- Conclusion: What the findings mean for the audience -->
+These results suggest that modular, declarative parsing is not only feasible but essential for keeping pace with evolving SPARQL standards.
+<!-- Perspectives: What the future holds, beyond this work -->
+Looking forward, we identify the need for round-trippable ASTs, Babel-inspired generators, and transformer pipelines to enable a complete, future-proof SPARQL toolchain.
 
 
-<!--
 <br>
-<span id="keywords"><span class="title">Keywords:</span> </span>
+<span id="keywords"><span class="title">Keywords: SPARQL, SPARQL tooling, modular parser</span> </span>
 <br>
--->
+
 
 **Source Code**: [https://github.com/comunica/traqula](https://github.com/comunica/traqula)
 
