drafts on related work

--- a/content/1.introduction.md
+++ b/content/1.introduction.md
@@ -33,15 +33,12 @@ The parser should not be a handwritten parser either, instead it should use decl
 
 A modular parser, that allows you to add, override, or swap grammar fragments at runtime,
 would empower both researchers and practitioners to create a new generation of language-aware SPARQL tools.
-This opens the door to use cases such as heterogeneous query tooling (e.g., adapting editors like [YASGUI](https://yasgui.org/) to custom SPARQL dialects),
+This opens the door to use cases such as heterogeneous query tooling (e.g., adapting editors like [YASGUI](cite:cites yasgui) to custom SPARQL dialects),
 while keeping maintainability in check.
 Additionally, it would allow SPARQL version translation, and rapid experimentation with new language features.
 In an ecosystem where SPARQL flavors are growing rather than converging,
 we believe modularity is not just a nicety—it’s a necessity.
 
-The next section discusses the state of the system architecture, while [](#demo) sketches the demonstration that we will provide to the workshop.
+The next section touches lightly on the related work, while [](#architecture) describes the system architecture.
+[](#demo) sketches the demonstration that we will provide to the workshop.
 In [](#conclusion) we conclude the future work and desired impact of this research.
-
-<!--
-<span class="comment" data-author="RT">If you have space for it, I also recommend adding a related work section. Maybe you can find some SPARQL parsing-related research papers. For example, Yasqui has a paper, which should probably be cited. SPARQL.js is also an important one, not sure if it has a paper. Comunica could be discussed briefly as well. And then there are the different SPARQL parsers in existence, which could be mentioned, such as Jena, Oxigraph, ... A detailed survey is not necessary though, we can keep this for the next paper. But a high-level overview may be good to have.</span>
--->
