--- a/content/3.architecture.md
+++ b/content/3.architecture.md
@@ -57,7 +57,7 @@ when invoked, receives the parsing context and any parameters, and outputs part 
 [](#ruleDef) shows an example parser rule definition.
 The ParserBuilder can then be used for compositional construction and extension through methods like `addRule`, `deleteRule`, `merge`, and typePatch.
 The typePatch utility would enable type updates to existing rules
-— particularly useful when extending or modifying a dependent rule without altering the original rule’s implementation.
+— particularly useful when extending or modifying a dependent rule without altering the original rule's implementation.
 After the construction of your parser, you can build it, as shown in [](#parserBuild),
 returning a parser which allows you to start parsing a string from any of the parser rules added to the builder
 - a property transferred from the underlying parser builder toolkit.
