--- a/content/references.bib
+++ b/content/references.bib
@@ -65,6 +65,17 @@
   url       = "https://github.com/babel/babel"
 }
 
+@article{yasgui,
+  title={The YASGUI family of SPARQL clients},
+  author={Rietveld, Laurens and Hoekstra, Rinke},
+  journal={Semantic Web},
+  volume={8},
+  number={3},
+  pages={373--383},
+  year={2016},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
 
 @inproceedings{comunica,
   author = {Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
