add ontograph and RDF4J to related work

--- a/content/2.sota.md
+++ b/content/2.sota.md
@@ -5,19 +5,6 @@
 <span class="comment" data-author="RT">If you have space for it, I also recommend adding a related work section. Maybe you can find some SPARQL parsing-related research papers. For example, Yasqui has a paper, which should probably be cited. SPARQL.js is also an important one, not sure if it has a paper. Comunica could be discussed briefly as well. And then there are the different SPARQL parsers in existence, which could be mentioned, such as Jena, Oxigraph, ... A detailed survey is not necessary though, we can keep this for the next paper. But a high-level overview may be good to have.</span>
 -->
 
-<!--
-related work:
-
-YASGUI as a visualiser.
-Jena parser: uses javaCC, a builder toolkit kind-off. https://javacc.github.io/javacc/
--> Strength of TRAQULA is the fact that it's using java classes, you cannot break an interface, you cannot 'extent' aka start from a parser, and remove components.
-
-Oxigraph: Seems to use https://github.com/kevinmehall/rust-peg -> https://github.com/oxigraph/oxigraph/blob/2247319a1ff9132fd574d56db40f7178da938000/lib/spargebra/src/parser.rs#L778
-does not seem to have modularity build in.
-
-
--->
-
 In this section we investigate the various SPARQL parser currently used.
 Comunica and YASGUI currently use [SPARQL.JS](https://www.npmjs.com/package/sparqljs) as parser.
 Sparql.JS is a parser created using the [Jison](https://www.npmjs.com/package/jison) parser builder.
@@ -56,6 +43,11 @@ proof: https://github.com/blazegraph/database/blob/829ce8241ec29fddf7c893f431b57
 -->
 [Blazegraph](https://github.com/blazegraph/database/) also uses [JavaCC].
 
-Ontotext GraphDB uses YASGUI as a UI, and their engine uses
+<!--
+Proof on graphDB using RDF4J:
+RDF4J uses JavaCC: https://github.com/eclipse-rdf4j/rdf4j/tree/b33d91485502d2f5266916c0581960e41b8f28b5/core/queryparser/sparql/JavaCC
+-->
+[Ontotext GraphDB](https://www.ontotext.com/products/graphdb/) uses YASGUI as a UI, and their engine uses RDF4J.
+RDF4J again uses JavaCC
 
 
